# KnowledgeGraphBuilder

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG_20260205.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  QUESTIONS_ANSWERED.md  QUICKSTART_LAW_GRAPH.md  README.md  docker-compose.yml  mkdocs.yml  nohup.out  pipeline_log.txt  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci-shacl.yml  ci.yml
Planning/: 00_START_HERE.md  01_ACADEMIC_OVERVIEW.md  02_ARCHITECTURE.md  03_INTERFACES.md  04_ISSUES_BACKLOG.md  05_SMOKE_TEST_RESULTS.md  06_VERSIONING_GUIDE.md  12_SEMANTIC_ENHANCEMENT.md  ARCHITECTURE.md  BACKLOG.md  BENCHMARKING_PLAN.md  BENCHMARKING_STATUS.md  C1_CORE_MODELS.md  C1_REPO_SCAFFOLD.md  C1_SCRIPTS.md  C1_WORKFLOW.md  C3_CORE_MODELS.md  C3_PYPROJECT.md  C3_REPO_SCAFFOLD.md  COMPETENCY_QUESTIONS.md  COMPLETE_PIPELINE_GUIDE.md  CONTRIBUTION_GUIDE.md  CURRENT_STATUS_AND_COMPARISON.md  EVALUATION_PLAN.md  FUSIONRAG_INTEGRATION.md  GRAPHQA_AGENT_API_PLAN.md  GRAPHQA_CHAT_IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PLAN_V2.md  IMPLEMENTATION_ROADMAP.md  ISSUES_BACKLOG.md  Implementation & Related Work 2f8e934a574780808443e93e594f6996.md  KG Construction & System Design – Detailed Notes 2f8e934a574780f5a674fc92d3986896.md  LANGEXTRACT_EVAL.md  LAW_DOCUMENT_CHECKLIST.md  LAW_GRAPH_BUILD.md  LAW_GRAPH_IMPLEMENTATION.md  LAW_GRAPH_PLAN.md  LAW_ONTOLOGY_RATIONALE.md  LAW_ONTOLOGY_SOURCES.md  MASTER_PLAN.md  (+22 more)
Planning/archive/: ADOPTION_ROADMAP_FROM_KG_COMPARISON.md  ADVANCED_UNIFIED_PROCESSOR.md  C1_CONFIG_FILES.md  C1_HITL_ONTOLOGY_EXTENSION.md  C1_PYPROJECT.md  C3_RETRIEVAL_STRATEGIES.md  C3_WORKFLOW.md  CROSS_DOCUMENT_RELATIONS.md  CURRENT_STATE_VS_END_GOALS.md  DEPLOYMENT_SETUP.md  EXTRACTION_CHECKPOINTING_ENRICHMENT.md  FUSIONRAG_IMPLEMENTATION_PLAN.md  INTERFACES.md  INTERFACE_CONTRACT.md  INTERFACE_NAMING_ISSUES.md  KGL_INTEGRATION_STRATEGY.md  KG_VERSIONING.md  NEXT_STEPS_AND_EVALUATION.md  PHASE5_IMPLEMENTATION_COMPLETE.md  PHASE_10_COMPLETE.md  PHASE_7_ASSESSMENT.md  PHASE_7_IMPLEMENTATION.md  PHASE_8_5_STOPPING_CRITERIA.md  PHASE_8_INTEGRATION_GUIDE.md  PHASE_9_PLAN.md  PROJECT_OVERVIEW.md  QUICK_IMPLEMENTATION_CHECKLIST.md  README_START_HERE.md  ROADMAP_PHASES_5_TO_12.md  SERVER_DEPLOYMENT_CHECKLIST.md  SESSION_SUMMARY.md
data/: README.md
data/evaluation/: competency_questions.json  qa_benchmark_template.json
data/examples/: competency_questions_template.txt
data/ontology/: README.md
data/profiles/: legal.json  template.json
data/smoke_test/: config.json  decomm_ontology.ttl  ontology.owl  questions.json
docker/: Dockerfile.api  Dockerfile.shacl2fol  shacl-entrypoint.sh
docs/: gen_ref_pages.py  index.md
docs/architecture/: domain-pluggability.md  overview.md  pipeline-layers.md
docs/getting-started/: configuration.md  infrastructure.md  quickstart.md
docs/guide/: experiments.md  full-pipeline.md  law-graph.md  validation.md
examples/: benchmark_paper.json  build_pipeline_example.py  demo_full_ecosystem.py  demo_short.py  experiment_baseline.json  test_single_experiment.json
experiment_output/exp_20260203_202837_635cfc0d/: run_metadata.json
experiment_results/baseline/: exp_20260205_074824_cbffda59_metadata.json  exp_20260205_075007_7a2db42a_metadata.json  exp_20260205_075504_c3eb3e0a_metadata.json  exp_20260205_075658_52b4f284_metadata.json  exp_20260205_110809_2ae9cdf1_metadata.json
scripts/: ABLATION_STUDY_EXAMPLES.py  build_kg.py  build_law_graph.py  build_law_graph.py.bak  build_law_ontology.py  cleanup_docs.sh  compare_kg_quality.py  crawl_law_index.py  demo_json_export.py  download_decom_laws_html.py  download_law_paragraphs.py  download_law_xml_zips.py  download_laws_html.py  download_ontology.py  enrich_checkpoint.py  enrich_ontology.py  entity_resolution_pass.py  fix_edge_ids.py  full_kg_pipeline.py  full_law_pipeline.py  gold_annotator.py  index_pdfs_simple.py  ingest.py  ingest_all.py  ingest_data.py  ingest_simple.py  link_kg_to_laws.py  load_ontology_to_fuseki.py  manage_versions.py  merge_legal_ontologies.py  organize_and_download_xml.py  pipeline_phase6.py  plot_convergence.py  quickstart.py  run_experiment.py  run_graph_analytics.py  run_kg_pipeline_on_documents.py  run_kg_scoring.py  run_law_graph.sh  run_legal_extraction.py  (+20 more)
scripts/archive/: organize_and_download_xml.py  run_kg_pipeline_on_documents.py
scripts/docker/: run_shacl2fol_container.sh
src/kgbuilder/: __init__.py  cli.py  logging_config.py
tests/: conftest.py  test_evaluation.py  test_findings_synthesizer.py  test_integration.py  test_phase7_integration.py  test_question_generator.py  test_storage.py
tests/api/: conftest.py  test_build.py  test_export.py  test_hitl.py  test_integration.py  test_middleware.py  test_status.py  test_validate.py
tests/assembly/: test_kg_builder_static_validation.py
tests/confidence/: test_analyzer.py  test_booster.py  (+4 more)
wandb/: latest-run
(+314 files in other folders)
